--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>About Us</title>
-  <link rel="stylesheet" href="css/au.css">
+  <link rel="stylesheet" href="au.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
   <div class="about-text">
 
     <div class="image">
-      <img src="images/auimg.jpg" width="450px">
+      <img src="auimg.jpg" width="450px">
     </div>
     <div class="para">
       <p>BUMBLE BEE is a dating app that bills itself as letting women make
