--- a/login.html
+++ b/login.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Bumble Bee</title>
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" href="about_us.html">
-<link rel="stylesheet" href="css/mystyle.css">
-<link rel="stylesheet" href="css/style2.css">
+<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="style2.css">
 <link rel="stylesheet" href="index home.html">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -16,7 +16,7 @@
 
     <nav>
       <div class ="logo">
-        <img src="images\image-removebg-preview.png" height="50" width="50">Bumble bee
+        <img src="image-removebg-preview.png" height="50" width="50">Bumble bee
       </div>
 
       <div class="menu">
