--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/style2.css" />
+		<link rel="stylesheet" href="style2.css" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500&display=swap"
 			rel="stylesheet"
@@ -19,7 +19,7 @@
 			<div class="side">
 				<div class="header">
 					<div class="avatar">
-						<img src="images/meet.png" alt="" />
+						<img src="meet.png" alt="" />
 					</div>
 					<div class="title">My profile</div>
 				</div>
