--- a/chat.html
+++ b/chat.html
@@ -12,6 +12,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
 		/>
+		<link rel="icon" href="favicon.ico">
 		<title>Document</title>
 	</head>
 	<body>
